force-app/main/default/objects/correspondence__c/correspondence__c.object-meta.xml
<CustomObject>
    <label>correspondence</label>
    <nameField>
        <label>correspondence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>correspondences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>