force-app/main/default/objects/correspondence__c/fields/LastMessageTimestamp__c.field-meta.xml
<CustomField>
    <fullName>LastMessageTimestamp__c</fullName>
    <label>LastMessageTimestamp</label>
    <type>DateTime</type>
</CustomField>