force-app/main/default/objects/correspondence__c/fields/Parent_Record__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record__c</fullName>
    <label>Parent Record</label>
    <type>Url</type>
</CustomField>