force-app/main/default/objects/correspondence__c/fields/ParentObjectId__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectId__c</fullName>
    <label>ParentObjectId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>