force-app/main/default/objects/correspondence__c/fields/ParentObjectType__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectType__c</fullName>
    <label>ParentObjectType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>